--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,4 @@
+# This file can be used to choose the colors of the streamlit interface, for color codes see: https://python-charts.com/colors/
 [theme]
 base="light"
 primaryColor="#5a9a4a"
