--- a/deployment/requirements.txt
+++ b/deployment/requirements.txt
@@ -2,10 +2,9 @@ aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
 aiosignal==1.3.1
 annotated-types==0.7.0
-anyio==4.6.0
-appnope==0.1.4
+anyio==4.6.2.post1
 asgiref==3.8.1
-asttokens==2.4.1
+async-timeout==4.0.3
 attrs==24.2.0
 backoff==2.2.1
 bcrypt==4.2.0
@@ -13,63 +12,56 @@ build==1.2.2.post1
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+Chroma==0.2.0
 chroma-hnswlib==0.7.6
-chromadb==0.5.13
-click==8.1.7
+chromadb==0.5.15
+click==7.1.2
+colorama==0.4.3
 coloredlogs==15.0.1
-comm==0.2.2
+configparser==4.0.2
 dataclasses-json==0.6.7
-debugpy==1.8.7
-decorator==5.1.1
 Deprecated==1.2.14
 durationpy==0.9
-executing==2.1.0
-fastapi==0.115.0
+exceptiongroup==1.2.2
+fastapi==0.115.2
 filelock==3.16.1
 flatbuffers==24.3.25
 frozenlist==1.4.1
-fsspec==2024.9.0
+fsspec==2024.10.0
 google-auth==2.35.0
 googleapis-common-protos==1.65.0
-grpcio==1.66.2
+grpcio==1.67.0
 h11==0.14.0
 httpcore==1.0.6
-httptools==0.6.1
+httptools==0.6.4
 httpx==0.27.2
-huggingface-hub==0.25.2
+huggingface-hub==0.26.0
 humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.4.0
 importlib_resources==6.4.5
-ipykernel==6.29.5
-ipython==8.28.0
-jedi==0.19.1
 Jinja2==3.1.4
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-jupyter_client==8.6.3
-jupyter_core==5.7.2
 kubernetes==31.0.0
-langchain==0.3.3
+langchain==0.3.4
 langchain-chroma==0.1.4
-langchain-community==0.3.2
-langchain-core==0.3.10
+langchain-community==0.3.3
+langchain-core==0.3.12
 langchain-huggingface==0.1.0
 langchain-text-splitters==0.3.0
-langsmith==0.1.134
+langsmith==0.1.136
 markdown-it-py==3.0.0
-MarkupSafe==3.0.1
-marshmallow==3.22.0
-matplotlib-inline==0.1.7
+MarkupSafe==3.0.2
+marshmallow==3.23.0
 mdurl==0.1.2
 mmh3==5.0.1
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.1.0
 mypy-extensions==1.0.0
-nest-asyncio==1.6.0
-networkx==3.4
+networkx==3.4.2
 numpy==1.26.4
 oauthlib==3.2.2
 onnxruntime==1.19.2
@@ -83,25 +75,17 @@ opentelemetry-proto==1.27.0
 opentelemetry-sdk==1.27.0
 opentelemetry-semantic-conventions==0.48b0
 opentelemetry-util-http==0.48b0
-orjson==3.10.7
+orjson==3.10.9
 overrides==7.7.0
 packaging==24.1
-pandas==2.2.3
-parso==0.8.4
-pexpect==4.9.0
-pillow==10.4.0
-platformdirs==4.3.6
+pillow==11.0.0
 posthog==3.7.0
-prompt_toolkit==3.0.48
 propcache==0.2.0
 protobuf==4.25.5
-psutil==6.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.9.2
-pydantic-settings==2.5.2
+pydantic-settings==2.6.0
 pydantic_core==2.23.4
 Pygments==2.18.0
 pypdf==5.0.1
@@ -109,9 +93,7 @@ PyPika==0.48.9
 pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pytz==2024.2
 PyYAML==6.0.2
-pyzmq==26.2.0
 rank-bm25==0.2.2
 regex==2024.9.11
 requests==2.32.3
@@ -120,35 +102,34 @@ requests-toolbelt==1.0.0
 rich==13.9.2
 rsa==4.9
 safetensors==0.4.5
+schema==0.7.7
 scikit-learn==1.5.2
 scipy==1.14.1
-sentence-transformers==3.2.0
+sentence-transformers==3.2.1
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
-SQLAlchemy==2.0.35
-stack-data==0.6.3
-starlette==0.38.6
-sympy==1.13.3
-tenacity==8.5.0
+SQLAlchemy==2.0.36
+starlette==0.40.0
+sympy==1.13.1
+tabulate==0.8.10
+tenacity==9.0.0
 threadpoolctl==3.5.0
 tokenizers==0.20.1
-torch==2.4.1
-tornado==6.4.1
+tomli==2.0.2
+torch==2.5.0
 tqdm==4.66.5
-traitlets==5.14.3
 transformers==4.45.2
-typer==0.12.5
 typing-inspect==0.9.0
 typing_extensions==4.12.2
-tzdata==2024.2
+ubiops==4.6.0
+ubiops-cli==2.23.0
 urllib3==2.2.3
-uvicorn==0.31.1
-uvloop==0.20.0
+uvicorn==0.32.0
+uvloop==0.21.0
 watchfiles==0.24.0
-wcwidth==0.2.13
 websocket-client==1.8.0
 websockets==13.1
 wrapt==1.16.0
-yarl==1.14.0
+yarl==1.15.5
 zipp==3.20.2
