--- a/.github/workflows/run_unittest.yml
+++ b/.github/workflows/run_unittest.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Lint with Ruff  
         run: |  
           pip install ruff  
-          ruff --format=github --target-version=py310 .  
+          ruff check --exclude archive  
         continue-on-error: true  
       - name: Test with pytest  
         run: |  
