Chore: update requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.4.0
 importlib_resources==6.4.5
+iniconfig==2.0.0
 Jinja2==3.1.4
 joblib==1.4.2
 jsonpatch==1.33
@@ -80,6 +81,7 @@ orjson==3.10.9
 overrides==7.7.0
 packaging==24.1
 pillow==11.0.0
+pluggy==1.5.0
 posthog==3.7.0
 propcache==0.2.0
 protobuf==4.25.5
@@ -93,6 +95,7 @@ pypdf==5.0.1
 PyPDF2==3.0.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
+pytest==8.3.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.2
