--- a/.github/workflows/run_unittest.yml
+++ b/.github/workflows/run_unittest.yml
@@ -26,6 +26,7 @@ jobs:
         continue-on-error: true  
       - name: Test with pytest  
         run: |  
+          pip install pytest pytest-cov
           coverage run -m pytest  -v -s  
       - name: Generate Coverage Report  
         run: |  
